max 3 Cards in About, fixed side bleeding (?)

--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -1,11 +1,3 @@
-.about-page {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin: 2rem;
-}
-
 .collab-wrapper {
   display: flex;
   flex-direction: column;
@@ -13,14 +5,14 @@
 }
 
 .collab-text {
-  max-width: 1000px;
+  max-width: 80%;
   font-size: 1.4rem;
   line-height: 2rem;
 }
 
 #line {
-  min-width: max-content;
-  max-width: 80%;
+  min-width: 80%;
+  max-width: 90%;
   margin-bottom: 3rem;
 }
 
@@ -46,3 +38,11 @@
   /* height: auto; */
 }
 
+.about-page {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-right: 10%;
+   padding-left: 10%;
+}
